Updated for class reroll

--- a/src/theme/app/_app.scss
+++ b/src/theme/app/_app.scss
@@ -1,4 +1,4 @@
-#app-mount .bg__12180 {
+#app-mount .bg_d4b6c5 {
   background: var(--background-dark);
 }
 
@@ -7,7 +7,7 @@
   color: var(--accent-text);
 }
 
-#app-mount .info__755e1 .line_cdcacc:first-child:before {
+#app-mount .info_c5a741 .line_c5a741:first-child:before {
   content: "MinimalCord " var(--minimalcord-version);
   display: block;
 }
