--- a/src/theme/app/_toolbar.scss
+++ b/src/theme/app/_toolbar.scss
@@ -1,12 +1,12 @@
 #app-mount {
   .title-3qD0b-,
-  .container__26baa {
+  .container_e44302 {
     background: var(--background);
   }
-  .children_cde9af:after {
+  .children_e44302:after {
     content: none;
   }
-  .searchBar__5a20a {
+  .searchBar_a46bef {
     background: var(--background-dark);
   }
 }
