--- a/src/theme/app/_tooltips.scss
+++ b/src/theme/app/_tooltips.scss
@@ -12,10 +12,10 @@
   .tooltipContent-Nejnvh {
     color: var(--text-focus);
     font-weight: var(--font-weight-bold);
-    .guildNameText__2c549 {
+    .guildNameText_a6ae3c {
       color: var(--text-focus);
     }
-    .muteText__8f07b {
+    .muteText_a6ae3c {
       color: var(--text-normal);
     }
   }
