--- a/src/theme/chat/_container.scss
+++ b/src/theme/chat/_container.scss
@@ -1,17 +1,17 @@
 #app-mount {
-  .chat__52833 {
+  .chat_a7d72e {
     background: var(--background);
-    .scrollerSpacer__6b1b6 {
+    .scrollerSpacer_e2e187 {
       height: 25px;
     }
-    .content__01e65:before {
+    .content_a7d72e:before {
       content: none;
     }
   }
-  .chatContent_f087cb {
+  .chatContent_a7d72e {
     background: transparent;
   }
-  .operations__62559 > a {
+  .operations_ed9386 > a {
     color: rgb(var(--accent), 1);
   }
 }
