--- a/src/theme/chat/_forum.scss
+++ b/src/theme/chat/_forum.scss
@@ -37,7 +37,7 @@
 			margin: 0;
 		}
 	}
-	.matchingPostsRow__6cdb0 {
+	.matchingPostsRow_a6d69a {
 		background: var(--background-alt);
 	}
 
@@ -50,7 +50,7 @@
 	.container-2qVG6q {
 		background: var(--background-alt);
 		border-radius: 5px;
-		.pill_f055c3 {
+		.pill_c993da {
 			background: var(--background-light);
 		}
 	}
