--- a/src/theme/guilds/_container.scss
+++ b/src/theme/guilds/_container.scss
@@ -1,6 +1,6 @@
-#app-mount .guilds__2b93a {
+#app-mount .guilds_a4d4d9 {
   background: var(--background-dark);
-  .scrollerBase__65223 {
+  .scrollerBase_c49869 {
     background: var(--background-dark);
     &::-webkit-scrollbar {
       display: none;
