--- a/src/theme/guilds/_server.scss
+++ b/src/theme/guilds/_server.scss
@@ -11,10 +11,10 @@
   }
 
   // Add/Join server & Server Discovery
-  .circleIconButton__05cf2 {
+  .circleIconButton_db6521 {
     background: var(--background-light);
     &:hover,
-    &.selected_aded59 {
+    &.selected_db6521 {
       background: rgb(var(--discord-green) / 1);
     }
   }
