--- a/src/theme/members/_container.scss
+++ b/src/theme/members/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
-  .container_f79ab4,
-  .members__573eb,
-  .members__573eb > div {
+  .container_cbd271,
+  .members_cbd271,
+  .members_cbd271 > div {
     background: transparent;
   }
 }
