--- a/src/theme/members/_member.scss
+++ b/src/theme/members/_member.scss
@@ -1,26 +1,26 @@
-#app-mount .member_aa4760 {
+#app-mount .member_a31c43 {
   background: transparent;
   .botTagRegular_c89c9a {
     background: rgb(var(--accent), 1);
     color: var(--accent-text);
-    .botText_daff56 {
+    .botText_a02df3 {
       font-weight: 600;
     }
   }
 
-  &:hover .layout_bb8e67 {
+  &:hover .layout_e9f61e {
     background: var(--background-alt);
   }
-  &:active .layout_bb8e67 {
+  &:active .layout_e9f61e {
     background: var(--background-light);
   }
-  &.selected__7f4cb .layout_bb8e67 {
+  &.selected_e9f61e .layout_e9f61e {
     background: rgb(var(--accent), 1);
     .roleColor-rz2vM0,
-    .activity_bafb94,
+    .activity_a31c43,
     .premiumIcon-1rDbWQ,
-    .username_ab1e31,
-    .username_ab1e31 span {
+    .username_a31c43,
+    .username_a31c43 span {
       color: var(--accent-text) !important;
     }
     rect[fill="#43b581"],
