--- a/src/theme/modals/_deletemessage.scss
+++ b/src/theme/modals/_deletemessage.scss
@@ -1,7 +1,7 @@
-#app-mount .message_ff43e6 {
+#app-mount .message_ddcc45 {
 	background: var(--background-alt);
 	box-shadow: none;
-	.cozy_f5c119 {
+	.cozy_ec86aa {
 		margin: 0 !important;
 	}
 }
