--- a/src/theme/modals/_quickswitcher.scss
+++ b/src/theme/modals/_quickswitcher.scss
@@ -1,11 +1,11 @@
 #app-mount {
-  .quickswitcher_b5bb0a {
+  .quickswitcher_f4e139 {
     background: var(--background);
   }
-  .scroller_d4b86c {
+  .scroller_f4e139 {
     background: transparent;
   }
-  .input__2a648 {
+  .input_f4e139 {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
     padding: 0 24px;
