--- a/src/theme/modals/_uploadfile.scss
+++ b/src/theme/modals/_uploadfile.scss
@@ -1,12 +1,12 @@
-#app-mount .uploadModal__6eb75 {
+#app-mount .uploadModal_f82cc7 {
 	background: var(--background);
 	border-radius: var(--border-radius);
 	box-shadow: var(--box-shadow);
-	.footer_f06dbb {
+	.footer_f82cc7 {
 		background: var(--background-alt);
 		box-shadow: none;
 	}
-	.slateTextArea_b19976 {
+	.slateTextArea_e52116 {
 		padding-left: 15px;
 	}
 }
