--- a/src/theme/pages/_discovery.scss
+++ b/src/theme/pages/_discovery.scss
@@ -3,7 +3,7 @@
     background: rgb(var(--accent), 1);
   }
 
-  .pageWrapper_c182d3 {
+  .pageWrapper_a3a4ce {
     background: var(--background);
     .input-2g-os5 {
       background: #fff;
@@ -11,7 +11,7 @@
     }
   }
 
-  .card__86773 {
+  .card_eb1ca6 {
     border-radius: var(--border-radius);
     background: var(--background-alt);
     foreignObject[mask="url(#svg-mask-squircle)"] {
@@ -20,12 +20,12 @@
     &:hover {
       background: var(--background-light-alt);
       box-shadow: var(--box-shadow);
-      .iconMask__4092e {
+      .iconMask_eb1ca6 {
         background: var(--background-light-alt);
       }
     }
   }
-  .iconMask__4092e {
+  .iconMask_eb1ca6 {
     border-radius: var(--border-radius);
     background: var(--background-alt);  
   }
