--- a/src/theme/popouts/_autocomplete.scss
+++ b/src/theme/popouts/_autocomplete.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.autocomplete__743a5 {
+	.autocomplete_f23da8 {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
-		.categoryHeader__70c8e {
+		.categoryHeader_fe2299 {
 			background: var(--background-light);
 		}
 	}
