--- a/src/theme/popouts/_contextmenu.scss
+++ b/src/theme/popouts/_contextmenu.scss
@@ -1,47 +1,47 @@
-.theme-light .menu__088f7 {
+.theme-light .menu_d90b3d {
   background: var(--background-light);
 }
-.theme-dark .menu__088f7 {
+.theme-dark .menu_d90b3d {
   background: var(--background-light-alt);
 }
 
 #app-mount {
-  .menu__088f7 {
+  .menu_d90b3d {
     box-shadow: var(--box-shadow);
 
     // Quick reactions
-    .button_bfb8e1 {
+    .button_a24e84 {
       background: var(--background);
     }
   }
-  .item__183e8 {
+  .item_d90b3d {
     line-height: normal;
 
-    .iconContainer__5d61c {
+    .iconContainer_d90b3d {
       display: flex;
       align-items: center;
       justify-content: center;
     }
-    .caret_ce50ce {
+    .caret_d90b3d {
       color: var(--text-normal);
     }
 
-    &:active, &.focused_dcafb9:not(.colorDanger__08c25) {
+    &:active, &.focused_d90b3d:not(.colorDanger_d90b3d) {
       background: rgb(var(--accent), 1);
       color: var(--accent-text);
-      .caret_ce50ce {
+      .caret_d90b3d {
         color: var(--accent-text);
       }
     }
-    &.colorBrand__9bb0f {
+    &.colorBrand_d90b3d {
       color: rgb(var(--accent));
-      &.focused_dcafb9 {
+      &.focused_d90b3d {
         color: var(--accent-text);
       }
     }
     &.colorPremium-p4p7qO {
       color: rgb(var(--discord-nitro) / 1);
-      &.focused_dcafb9 {
+      &.focused_d90b3d {
         color: #fff;
         background: rgb(var(--discord-nitro) / 1);
       }
