--- a/src/theme/popouts/_emojipicker.scss
+++ b/src/theme/popouts/_emojipicker.scss
@@ -1,13 +1,13 @@
 #app-mount {
-  .contentWrapper_e0bb2c {
+  .contentWrapper_af5dbb {
     background: var(--background-light-alt);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .scroller_ac6d1c::-webkit-scrollbar {
+  .scroller_dcade6::-webkit-scrollbar {
     display: none;
   }
-  .container_ec5ce2 {
+  .container_effbe2 {
     background: var(--background);
     border: 1px solid var(--background);
     transition: border-color .15s ease;
@@ -19,23 +19,23 @@
     }
   }
 
-  .wrapper__85934 {
+  .wrapper_dc0b29 {
     background: var(--background);
   }
 
 
-  .list__30719 {
-    .listItems__49027 {
+  .list_a3bc57 {
+    .listItems_dcade6 {
       left: 0 !important;
     }
     ul[role="row"] {
       padding-left: 8px;
     }
-		.wrapper__91b2c {
+		.wrapper_e06857 {
 			background: var(--background-light-alt);
 			padding-left: 12px;
 		}
-		.inspector__80c84 {
+		.inspector_c3120f {
 			background: var(--background-light);
 		}
   }
