--- a/src/theme/popouts/_inbox.scss
+++ b/src/theme/popouts/_inbox.scss
@@ -1,12 +1,12 @@
 #app-mount {
-  .container__7c2c1 {
+  .container_ddb5b4 {
     margin: 20px 0;
   }
-  .channelHeader_ea0f89 {
+  .channelHeader_f3978e {
     background: var(--background-light-alt);
     padding: 16px;
   }
-  .messageContainer_cb3d47 {
+  .messageContainer_ddb5b4 {
     border-radius: 0 0 var(--border-radius) var(--border-radius);
     background: var(--background-alt);
   }
