--- a/src/theme/popouts/_pins.scss
+++ b/src/theme/popouts/_pins.scss
@@ -1,19 +1,19 @@
 #app-mount {
-  .messagesPopoutWrap__10dd1 {
+  .messagesPopoutWrap_ac90a2 {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .header__21b33 {
+  .header_ac90a2 {
     background: var(--background-alt);
     box-shadow: var(--box-shadow);
     z-index: 2;
   }
-  .messageGroupWrapper__1fce2 {
+  .messageGroupWrapper_ac90a2 {
     background: var(--background-alt);
     border: none;
   }
-  .messageGroupCozy__9d016 {
+  .messageGroupCozy_ac90a2 {
     margin: 0 !important;
     padding: 8px 8px 8px 0 !important;
   }
