--- a/src/theme/popouts/_search.scss
+++ b/src/theme/popouts/_search.scss
@@ -1,9 +1,9 @@
 #app-mount {
-  .container__84c26 {
+  .container_eedf95 {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
   }
-  .option__91497 {
+  .option_b0286e {
     &:after {
       background: linear-gradient(90deg, transparent, var(--background-light));
     }
