--- a/src/theme/popouts/_threads.scss
+++ b/src/theme/popouts/_threads.scss
@@ -1,13 +1,13 @@
 #app-mount {
-	.container_f93da8 {
+	.container_e664f3 {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		border-radius: var(--border-radius);
 	}
-	.header__6d44a {
+	.header_e664f3 {
 		background: var(--background-alt);
 	}
-	.container__9922f {
+	.container_acb8b3 {
 		background: var(--background-alt);
 		border-radius: var(--border-radius);
 		border: none;
