--- a/src/theme/settings/guild/_roles.scss
+++ b/src/theme/settings/guild/_roles.scss
@@ -1,16 +1,16 @@
 #app-mount {
-  .sidebar__37984 {
+  .sidebar_e87574 {
     border: none;
   }
-  .titleContainer_d09261 {
+  .titleContainer_e87574 {
     background: var(--background);
     box-shadow: none;
   }
-  .header_ee0bd9 {
+  .header_bd05f1 {
     background: var(--background);
     box-shadow: none;
   }
-  .scroller_c92337 {
+  .scroller_e9196a {
     background: transparent;
   }
 }
