--- a/src/theme/settings/user/_myaccount.scss
+++ b/src/theme/settings/user/_myaccount.scss
@@ -1,9 +1,9 @@
-#app-mount .layer__2efaa:not(.baseLayer__8fda3) {
-	.accountProfileCard__22589 {
+#app-mount .layer_d4b6c5:not(.baseLayer_d4b6c5) {
+	.accountProfileCard_b69b77 {
 		  background: var(--background-alt);
 	  }
-	  .background_b61fcc,
-	  .fieldList_aab0de {
+	  .background_b69b77,
+	  .fieldList_b69b77 {
 		  background: var(--background);
 	  }
   }
