--- a/src/theme/sidebar/_container.scss
+++ b/src/theme/sidebar/_container.scss
@@ -1,6 +1,6 @@
 #app-mount {
-  .container__7e23c,
-  .sidebar_e031be {
+  .container_ee69e0,
+  .sidebar_a4d4d9 {
     background: var(--background);
   }
 }
