--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -1,16 +1,16 @@
 #app-mount {
-	.privateChannels__9b518 {
+	.privateChannels_f0963d {
     background: transparent;
-		.scroller__89969 {
+		.scroller_c47fa9 {
 			background: transparent;
 		}
   }
-  .channel__0aef5 {
+  .channel_c91bad {
     margin-left: 0;
     border-radius: 0 4px 4px 0;
     padding: 0;
     margin-bottom: 3px;
-    .layout__59abc {
+    .layout_f9647d {
       border-radius: 0 var(--border-radius) var(--border-radius) 0;
       padding-left: 16px;
     }
