--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -1,13 +1,13 @@
 #app-mount {
-  .panels__58331 {
+  .panels_a4d4d9 {
     background: var(--background);
   }
-  .activityPanel_b73e7a
-  .container_debb33 {
+  .activityPanel_a4d4d9
+  .container_b2ca13 {
     background: transparent;
   }
-  .container_debb33,
-  .activityPanel_b73e7a {
+  .container_b2ca13,
+  .activityPanel_a4d4d9 {
     background: transparent;
     border: none;
   }
