--- a/src/theme/chat/_searchresults.scss
+++ b/src/theme/chat/_searchresults.scss
@@ -1,9 +1,9 @@
 #app-mount {
-  .searchResultsWrap__2e184 {
+  .searchResultsWrap_c2b47d {
     background: var(--background-alt);
     border-top-left-radius: var(--border-radius);
   }
-  .searchHeader__4d70e {
+  .searchHeader_b7c924 {
     background: var(--background-light);
     box-shadow: var(--box-shadow-alt);
     .item-3XjbnG.selected-g-kMVV {
@@ -14,26 +14,26 @@
     background: var(--background-alt);
   }
 
-  .searchResult__00093 {
+  .searchResult_ddc613 {
     border: none;
     background: var(--background-light);
-    .cozy_f5c119 {
+    .cozy_ec86aa {
       margin: 0 !important;
     }
   }
   .searchResultMessage-1fxgXh {
-    .cozy_f5c119 {
+    .cozy_ec86aa {
       margin: 0;
     }
 
-    &:not(.hit-1fVM9e) .cozy_f5c119:before {
+    &:not(.hit-1fVM9e) .cozy_ec86aa:before {
       content: none;
     }
     &.hit-1fVM9e {
       box-shadow: 0 0 10px 6px var(--background-alt);
       border: none;
       border-radius: var(--border-radius);
-      .cozy_f5c119 {
+      .cozy_ec86aa {
         background: var(--background-light);
       }
     }
