--- a/src/theme/chat/_threads.scss
+++ b/src/theme/chat/_threads.scss
@@ -1,16 +1,16 @@
 #app-mount {
-	.container__694a1 {
+	.container_d1c246 {
 		background: var(--background);
 	}
-	.divider__4df9f {
+	.divider_af45f8 {
 		background: var(--background-light);
 	}
-	.container__68e43 {
+	.container_b385c8 {
 		background: transparent;
 		border: none;
 		padding-right: 8px;
 	}
-	.chat__4eed1::before {
+	.chat_d6c7e0::before {
 		content: none;
 	}
 }
