--- a/src/theme/guilds/_folder.scss
+++ b/src/theme/guilds/_folder.scss
@@ -1,8 +1,8 @@
 #app-mount {
-  .expandedFolderBackground_b1385f {
+  .expandedFolderBackground_bc7085 {
     background: var(--background-light);
   }
-  .folder__17546 {
+  .folder_bc7085 {
     background: var(--background-light);
   }
 }
