--- a/src/theme/inputs/_checkbox.scss
+++ b/src/theme/inputs/_checkbox.scss
@@ -1,19 +1,19 @@
 #app-mount {
-  .container__2ed72 {
+  .container_cebd1c {
     transition: .15s ease background-color;
     background: var(--background-dark) !important;
-    &.checked__36fdc {
+    &.checked_cebd1c {
       background: rgb(var(--accent)) !important;
     }
-    &:not([style*="rgb(128"], .checked__36fdc) {
+    &:not([style*="rgb(128"], .checked_cebd1c) {
       background: rgb(var(--accent), .5) !important;
     }
   }
 
   // Checkbox row
-  .control__6a084.row-31nALW {
+  .control_ed1d57.row-31nALW {
     background: var(--background-light);
-    &.checked-1pZh2h .slider__41d94 {
+    &.checked-1pZh2h .slider_cebd1c {
       background: rgb(var(--accent), 1) !important;
       border-color: rgb(var(--accent), 1) !important;
     }
@@ -21,17 +21,17 @@
 
   // Menu Checkbox
   [role="menuitemcheckbox"][aria-checked="true"] {
-    .checkbox__378d3 {
+    .checkbox_d90b3d {
       color: rgb(var(--accent), 1);
     }
-    .check__8d1bd {
+    .check_d90b3d {
       color: var(--accent-text);
     }
-    &.focused_dcafb9 {
-      .checkbox__378d3 {
+    &.focused_d90b3d {
+      .checkbox_d90b3d {
         color: var(--accent-text);
       }
-      .check__8d1bd {
+      .check_d90b3d {
         color: rgb(var(--accent), 1);
       }
     }
