--- a/src/theme/inputs/_radiogroup.scss
+++ b/src/theme/inputs/_radiogroup.scss
@@ -1,35 +1,35 @@
 #app-mount {
-  [role="radiogroup"] .item_b7fb7e {
+  [role="radiogroup"] .item_eb92a8 {
     background: var(--background-alt);
     &:hover {
       background: var(--background-light);
     }
     &[aria-checked="true"] {
-      .radioBar__70669 {
+      .radioBar_eb92a8 {
         background: rgb(var(--accent));
         color: var(--accent-text);
         &[style*="--radio-bar-accent-color"] {
           background: var(--radio-bar-accent-color);
           color: #fff;
-          .radioIconForeground__9ca1e {
+          .radioIconForeground_eb92a8 {
             color: #fff;
           }
         }
       }
-      .radioIconForeground__9ca1e,
+      .radioIconForeground_eb92a8,
       .colorStandard-21JIj7,
       .colorHeaderSecondary-g5teka {
         color: var(--accent-text);
       }
     }
   }
-  .children_aba8cb > .marginBottom40_f4d1a4 .item_b7fb7e,
-  .marginBottom20__9fcf3 .item_b7fb7e {
+  .children_a6ae9b > .marginBottom40_f7730b .item_eb92a8,
+  .marginBottom20_f7730b .item_eb92a8 {
     background: var(--background-alt);
     &[aria-checked="true"] {
       background: rgb(var(--accent));
       color: var(--accent-text);
-      .radioIconForeground__9ca1e {
+      .radioIconForeground_eb92a8 {
         color: var(--accent-text);
       }
     }
@@ -37,10 +37,10 @@
 
   // Menu Radio
   [role="menuitemradio"][aria-checked="true"] {
-    .radioSelection__41d1e {
+    .radioSelection_d90b3d {
       color: rgb(var(--accent), 1);
     }
-    &.focused_dcafb9 .radioSelection__41d1e {
+    &.focused_d90b3d .radioSelection_d90b3d {
       color: #fff;
     }
   }
