--- a/src/theme/modals/_modal.scss
+++ b/src/theme/modals/_modal.scss
@@ -1,16 +1,16 @@
 #app-mount {
   .modal-3O0aXp,
-  .root_a28985 {
+  .root_f9a4c9 {
     background: var(--background-alt);
     box-shadow: var(--box-shadow);
   }
-  .header__5e5a6 {
+  .header_f9a4c9 {
     box-shadow: none;
   }
   .content-18dVld {
     padding: 0 24px 24px 24px;
   }
-  .footer_e0b400 {
+  .footer_f9a4c9 {
     background: var(--background);
     box-shadow: none;
     padding: 24px;
