--- a/src/theme/modals/_userprofile.scss
+++ b/src/theme/modals/_userprofile.scss
@@ -2,9 +2,9 @@
 
   // Global styles
   .size12-oc4dx4,
-  .activityName_a7b7de,
-  .nameNormal_cb5c2b,
-  .nameWrap_b61c4b {
+  .activityName_d5089b,
+  .nameNormal_d5089b,
+  .nameWrap_d5089b {
     color: var(--text-normal);
   }
 
@@ -68,7 +68,7 @@
   }
 
 	&[style*="--user-background"] {
-		.banner__6d414:not(.bannerPremium__69560) {
+		.banner_c3e427:not(.bannerPremium_c3e427) {
 			height: 240px;
 			background: var(--user-background) center/cover;
 		}
