--- a/src/theme/settings/user/_authapps.scss
+++ b/src/theme/settings/user/_authapps.scss
@@ -1,5 +1,5 @@
-#app-mount .layer__2efaa:not(.baseLayer__8fda3) {
-  .authedApp__51b26 {
+#app-mount .layer_d4b6c5:not(.baseLayer_d4b6c5) {
+  .authedApp_f0135d {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     border: none;
