--- a/src/theme/settings/user/_billing.scss
+++ b/src/theme/settings/user/_billing.scss
@@ -1,27 +1,27 @@
-#app-mount .layer__2efaa:not(.baseLayer__8fda3) {
-  .paymentPane__9cf01 {
+#app-mount .layer_d4b6c5:not(.baseLayer_d4b6c5) {
+  .paymentPane_f66684 {
     background: var(--background-alt);
   }
-  .paginator_e620d3 {
+  .paginator_f66684 {
     background: transparent;
   }
-  .bottomDivider_a59d97 {
+  .bottomDivider_f66684 {
     border: none;
     &::-webkit-scrollbar {
       display: none;
     }
   }
-  .payment__7d702 {
+  .payment_a28a08 {
     background: transparent;
     &:hover {
       background: var(--background-light-alt);
     }
-    &:not(.hoverablePayment__3ea24) {
+    &:not(.hoverablePayment_a28a08) {
       background: var(--background-light);
       padding-bottom: 20px;
     }
   }
-  .expandedInfo__47bad {
+  .expandedInfo_a28a08 {
     background: var(--background-light-alt);
     margin: 0 20px;
   }
