--- a/src/theme/settings/user/_connections.scss
+++ b/src/theme/settings/user/_connections.scss
@@ -1,27 +1,27 @@
-#app-mount .layer__2efaa:not(.baseLayer__8fda3) {
-  .connectContainer__8050b {
+#app-mount .layer_d4b6c5:not(.baseLayer_d4b6c5) {
+  .connectContainer_e2a436 {
     background: var(--background-light);
     margin-bottom: 55px;
   }
-  .accountButtonInner__80e3a {
+  .accountButtonInner_e2a436 {
     background-color: var(--background-light-alt);
     &:hover {
       background-color: var(--background);
     }
   }
 
-  .connection_fff5f6 {
+  .connection_e2a436 {
     background: var(--background-alt);
   }
-  .connectionHeader__3c82d {
+  .connectionHeader_e2a436 {
     background: var(--background-light-alt);
   }
 
-  .metadataContainer__7b316 {
+  .metadataContainer_e2a436 {
     background: var(--background);
     padding: 16px;
   }
-  .integration_d2f026 {
+  .integration_e2a436 {
     background: var(--background-alt);
   }
 }
