--- a/src/theme/settings/user/_voicevideo.scss
+++ b/src/theme/settings/user/_voicevideo.scss
@@ -1,5 +1,5 @@
 #app-mount [aria-label="GUILD_SETTINGS"] {
-  .children_b15c64 > .flex-1xMQg5.flex__909d4 {
+  .children_a6ae9b > .flex-1xMQg5.flex_ec1a20 {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     padding: 16px;
@@ -9,14 +9,14 @@
     border-radius: var(--border-radius);
     padding: 16px;
     margin-top: 20px;
-    .marginTop8__83d4b {
+    .marginTop8_f7730b {
       margin-top: 0;
     }
   }
-  .container__6d33c {
+  .container_e5cdf3 {
     width: 530px !important;
   }
-  .notches__065e9 {
+  .notches_e5cdf3 {
     background: none;
   }
 }
