--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -1,17 +1,17 @@
 #app-mount {
-  .wrapper__612a5 {
+  .wrapper_d8bfb3 {
     height: auto;
     margin-bottom: 2px;
-    &.modeMuted_f0a72e .name__4eb92 {
+    &.modeMuted_d8bfb3 .name_d8bfb3 {
       color: var(--text-muted);
     }
 
-    &.modeUnreadImportant__35358 .icon__67ab4 {
+    &.modeUnreadImportant_d8bfb3 .icon_d8bfb3 {
       color: var(--text-focus);
     }
 
-    &.modeSelected__473f1 {
-      .icon__67ab4 {
+    &.modeSelected_d8bfb3 {
+      .icon_d8bfb3 {
         color: var(--text-focus);
       }
       &:before {
@@ -25,28 +25,28 @@
       }
     }
 
-    &.typeThread__5fb37 .link_ddbb36 {
+    &.typeThread_d8bfb3 .link_d8bfb3 {
       padding-left: 42px;
     }
   }
-  .spine__88e6d {
+  .spine_e1e976 {
     z-index: 1;
   }
-  .wrapper__612a5 {
+  .wrapper_d8bfb3 {
     margin-left: 0;
     border-radius: 0 var(--border-radius) var(--border-radius) 0;
   }
-  .link_ddbb36 {
+  .link_d8bfb3 {
     padding-left: 16px;
   }
-  .unread__48cf4 {
+  .unread_d8bfb3 {
     z-index: 2;
     left: 0;
   }
 
 
   // Voice
-  .avatarSpeaking_f239de {
+  .avatarSpeaking_cdc675 {
     box-shadow: inset 0 0 0 2px rgb(var(--accent), 1), inset 0 0 0 3px var(--background);
   }
 }
