--- a/src/theme/sidebar/_header.scss
+++ b/src/theme/sidebar/_header.scss
@@ -1,18 +1,18 @@
 #app-mount {
-  .selected__987e6 .header__77c95 {
+  .selected_fd6364 .header_fd6364 {
     background: transparent;
   }
-  .header__77c95 {
+  .header_fd6364 {
     box-shadow: none;
     &:hover {
       background: transparent;
     }
   }
 
-  .searchBar__621ec {
+  .searchBar_f0963d {
     box-shadow: none;
   }
-  .searchBarComponent__8f95f {
+  .searchBarComponent_f0963d {
     background: var(--background-dark);
   }
 }
