--- a/src/theme/chat/_dividers.scss
+++ b/src/theme/chat/_dividers.scss
@@ -1,5 +1,5 @@
-#app-mount .divider_fc5f50 {
-  &.isUnread_fc5f50 {
+#app-mount .divider_c2654d {
+  &.isUnread_c2654d {
     margin: calc(var(--message-padding) / -1 + (var(--message-padding) / 2)) 8px var(--message-padding) calc(55px + (var(--message-padding) * 2));
     height: 0;
     top: 0;
@@ -7,10 +7,10 @@
       margin: var(--message-spacing) 8px var(--message-spacing) 20px;
     }
   }
-  &.hasContent_fc5f50 {
+  &.hasContent_c2654d {
     margin: calc(var(--message-spacing) * 2) 0 calc(var(--message-spacing) * 2) 20px;
 
-    .content_fc5f50 {
+    .content_c2654d {
       background: var(--background-light);
       padding: 4px 8px;
       line-height: normal;
@@ -19,7 +19,7 @@
       color: var(--text-normal);
     }
 
-    &:not(.isUnread_fc5f50) {
+    &:not(.isUnread_c2654d) {
       border-top: none;
       height: auto;
       &:before {
