--- a/src/theme/modals/_deletemessage.scss
+++ b/src/theme/modals/_deletemessage.scss
@@ -1,7 +1,7 @@
 #app-mount .message_ddcc45 {
 	background: var(--background-alt);
 	box-shadow: none;
-	.cozy_ec86aa {
+	.cozy_f9f2ca {
 		margin: 0 !important;
 	}
 }
