--- a/src/theme/modals/_userprofile.scss
+++ b/src/theme/modals/_userprofile.scss
@@ -2,9 +2,9 @@
 
   // Global styles
   .size12-oc4dx4,
-  .activityName_d5089b,
-  .nameNormal_d5089b,
-  .nameWrap_d5089b {
+  .activityName_c1d9fd,
+  .nameNormal_c1d9fd,
+  .nameWrap_c1d9fd {
     color: var(--text-normal);
   }
 
