--- a/src/theme/pages/_discovery.scss
+++ b/src/theme/pages/_discovery.scss
@@ -11,7 +11,7 @@
     }
   }
 
-  .card_eb1ca6 {
+  .card_e90879 {
     border-radius: var(--border-radius);
     background: var(--background-alt);
     foreignObject[mask="url(#svg-mask-squircle)"] {
@@ -20,12 +20,12 @@
     &:hover {
       background: var(--background-light-alt);
       box-shadow: var(--box-shadow);
-      .iconMask_eb1ca6 {
+      .iconMask_e90879 {
         background: var(--background-light-alt);
       }
     }
   }
-  .iconMask_eb1ca6 {
+  .iconMask_e90879 {
     border-radius: var(--border-radius);
     background: var(--background-alt);  
   }
