--- a/src/theme/pages/_friends.scss
+++ b/src/theme/pages/_friends.scss
@@ -56,7 +56,7 @@
 		border: none;
     &:hover {
       background: var(--background-light);
-      .inset_c0f6a6 {
+      .inset_ac5d22 {
         background: var(--background-alt);
       }
     }
@@ -64,7 +64,7 @@
 	.section_cd82a7 {
 		background: var(--background-light);
 	}
-  .inset_c0f6a6 {
+  .inset_ac5d22 {
     background: var(--background);
   }
 }
