--- a/src/theme/popouts/_autocomplete.scss
+++ b/src/theme/popouts/_autocomplete.scss
@@ -1,5 +1,5 @@
 #app-mount {
-	.autocomplete_f23da8 {
+	.autocomplete_bcc24e {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		.categoryHeader_fe2299 {
