--- a/src/theme/popouts/_emojipicker.scss
+++ b/src/theme/popouts/_emojipicker.scss
@@ -4,7 +4,7 @@
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .scroller_dcade6::-webkit-scrollbar {
+  .scroller_d53d65::-webkit-scrollbar {
     display: none;
   }
   .container_effbe2 {
@@ -25,7 +25,7 @@
 
 
   .list_a3bc57 {
-    .listItems_dcade6 {
+    .listItems_d53d65 {
       left: 0 !important;
     }
     ul[role="row"] {
