--- a/src/theme/popouts/_userpopout.scss
+++ b/src/theme/popouts/_userpopout.scss
@@ -30,7 +30,7 @@
 					pointer-events: none;
 				}
 			}
-			.roleRemoveButton_e4010c {
+			.roleRemoveButton_f9575e {
 				position: unset;
 				& + .roleName_e4010c {
 					position: relative;
