--- a/src/theme/settings/_global.scss
+++ b/src/theme/settings/_global.scss
@@ -32,7 +32,7 @@
       padding: 16px;
       border: none;
     }
-    .children_a6ae9b .flex_bba380.flex_ec1a20 {
+    .children_a6ae9b .flex_dc333f.flex_ec1a20 {
       padding: 0 !important;
     }
   }
