--- a/src/theme/settings/guild/_roles.scss
+++ b/src/theme/settings/guild/_roles.scss
@@ -10,7 +10,7 @@
     background: var(--background);
     box-shadow: none;
   }
-  .scroller_e9196a {
+  .scroller_ff90b2 {
     background: transparent;
   }
 }
