--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -10,7 +10,7 @@
     border-radius: 0 4px 4px 0;
     padding: 0;
     margin-bottom: 3px;
-    .layout_f9647d {
+    .layout_ec8679 {
       border-radius: 0 var(--border-radius) var(--border-radius) 0;
       padding-left: 16px;
     }
