--- a/src/theme/app/_toolbar.scss
+++ b/src/theme/app/_toolbar.scss
@@ -1,9 +1,9 @@
 #app-mount {
   .title-3qD0b-,
-  .container_e44302 {
+  .container_fc4f04 {
     background: var(--background);
   }
-  .children_e44302:after {
+  .children_fc4f04:after {
     content: none;
   }
   .searchBar_a46bef {
