--- a/src/theme/chat/_container.scss
+++ b/src/theme/chat/_container.scss
@@ -11,7 +11,7 @@
   .chatContent_a7d72e {
     background: transparent;
   }
-  .operations_ed9386 > a {
+  .operations_baf0d6 > a {
     color: rgb(var(--accent), 1);
   }
 }
