--- a/src/theme/members/_member.scss
+++ b/src/theme/members/_member.scss
@@ -3,18 +3,18 @@
   .botTagRegular_c89c9a {
     background: rgb(var(--accent), 1);
     color: var(--accent-text);
-    .botText_a02df3 {
+    .botText_a9e77f {
       font-weight: 600;
     }
   }
 
-  &:hover .layout_e9f61e {
+  &:hover .layout_d808b0 {
     background: var(--background-alt);
   }
-  &:active .layout_e9f61e {
+  &:active .layout_d808b0 {
     background: var(--background-light);
   }
-  &.selected_e9f61e .layout_e9f61e {
+  &.selected_d808b0 .layout_d808b0 {
     background: rgb(var(--accent), 1);
     .roleColor-rz2vM0,
     .activity_a31c43,
