--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -46,7 +46,7 @@
 
 
   // Voice
-  .avatarSpeaking_cdc675 {
+  .avatarSpeaking_d80634 {
     box-shadow: inset 0 0 0 2px rgb(var(--accent), 1), inset 0 0 0 3px var(--background);
   }
 }
