--- a/src/theme/sidebar/_unreadbar.scss
+++ b/src/theme/sidebar/_unreadbar.scss
@@ -1,4 +1,4 @@
-#app-mount .sidebar_a4d4d9 .bar_c10249 {
+#app-mount .sidebar_a4d4d9 .bar_edf32f {
   border-radius: var(--border-radius);
   background: var(--background-light);
   box-shadow: var(--box-shadow);
